force-app/main/default/objects/Auto_Heal_Run__c/Auto_Heal_Run__c.object-meta.xml
<CustomObject>
    <description>Permanent audit record of every auto-heal playbook execution by the SentinelFlow Guardian Engine.</description>
    <label>Auto Heal Run</label>
    <nameField>
        <displayFormat>AHR-{0000}</displayFormat>
        <label>Auto Heal Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Heal Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>