force-app/main/default/objects/Auto_Heal_Run__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>The playbook action that was executed (Retry, Restart Service, Token Refresh, Escalate).</description>
    <label>Action Taken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>