force-app/main/default/objects/Auto_Heal_Run__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>The AI confidence score at the time the playbook was triggered.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>