force-app/main/default/objects/Auto_Heal_Run__c/fields/Detail_Message__c.field-meta.xml
<CustomField>
    <fullName>Detail_Message__c</fullName>
    <description>Detailed result message from the auto-heal execution.</description>
    <label>Detail Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>