force-app/main/default/objects/Auto_Heal_Run__c/fields/Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_ms__c</fullName>
    <description>Execution time of the playbook in milliseconds.</description>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>