force-app/main/default/objects/Auto_Heal_Run__c/fields/Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>Execution_Log__c</fullName>
    <description>Detailed output or response from the recovery playbook.</description>
    <label>Execution Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>