force-app/main/default/objects/Auto_Heal_Run__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <description>The incident that was auto-healed.</description>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Auto Heal Runs</relationshipLabel>
    <relationshipName>Auto_Heal_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>