force-app/main/default/objects/Auto_Heal_Run__c/fields/Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>Playbook_Name__c</fullName>
    <description>The specific recovery playbook executed (e.g., Retry Callout, Refresh Token).</description>
    <label>Playbook Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>