force-app/main/default/objects/Auto_Heal_Run__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The outcome of the auto-heal execution (Succeeded, Failed, Pending).</description>
    <label>Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>