force-app/main/default/objects/Auto_Heal_Run__c/fields/Retry_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt__c</fullName>
    <description>The retry attempt number for this auto-heal run.</description>
    <label>Retry Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>