force-app/main/default/objects/Auto_Heal_Run__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the playbook successfully mitigated the incident.</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>