force-app/main/default/objects/Auto_Heal_Run__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>The tenant associated with this auto-heal run.</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Auto Heal Runs</relationshipLabel>
    <relationshipName>Auto_Heal_Runs1</relationshipName>
    <type>Lookup</type>
</CustomField>