force-app/main/default/objects/Auto_Heal_Run__c/fields/Trigger_Incident__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The incident that triggered this auto-heal run.</description>
    <label>Trigger Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Auto Heal Runs (Trigger)</relationshipLabel>
    <relationshipName>Auto_Heal_Runs_Trigger</relationshipName>
    <type>Lookup</type>
</CustomField>